Fix flippable alignment

--- a/static/assets/styles/main_app.less
+++ b/static/assets/styles/main_app.less
@@ -148,8 +148,6 @@ body {
       background-color: rgba(0, 100, 255, 0.6);
       border-radius: 15px;
       font-size: 1.6em;
-      margin-left: 20px;
-      margin-right: 20px;
       transform: rotateY(180deg);
     }
 
